force-app/main/default/objects/ProductInformation__c/ProductInformation__c.object-meta.xml
<CustomObject>
    <description>To store product information</description>
    <label>Product Information</label>
    <nameField>
        <displayFormat>PI-{000}</displayFormat>
        <label>Product Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>