force-app/main/default/objects/ProductInformation__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to determine if the prices are active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>