force-app/main/default/objects/ProductInformation__c/fields/ATMFee__c.field-meta.xml
<CustomField>
    <fullName>ATMFee__c</fullName>
    <description>To store ATM Fee</description>
    <label>ATM Fee</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>