force-app/main/default/objects/ProductInformation__c/fields/CardReplacementCost__c.field-meta.xml
<CustomField>
    <fullName>CardReplacementCost__c</fullName>
    <description>To store Card Replacement Cost</description>
    <label>Card Replacement Cost</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>