force-app/main/default/objects/ProductInformation__c/fields/CostPerCalendarMonth__c.field-meta.xml
<CustomField>
    <fullName>CostPerCalendarMonth__c</fullName>
    <description>To store Cost per Calendar Month</description>
    <label>Cost per Calendar Month</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>